--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "table-of-goods",
   "version": "1.0.0",
-  "description": "Example project",
+  "description": "Table of Goods",
   "author": "Philip Nechiporenko <philipn@yandex.ru>",
   "private": true,
   "scripts": {
