--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .DS_Store
 node_modules/
-dist/
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/test/unit/coverage/
 
 # Editor directories and files
 .idea
