--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "table-of-goods",
   "version": "1.0.0",
-  "description": "Table of Goods",
+  "description": "An example of the single page site made in Vue.js",
   "author": "Philip Nechiporenko <philipn@yandex.ru>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
@@ -27,7 +30,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
@@ -45,11 +47,27 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
     "webpack-bundle-analyzer": "^2.9.0",
+    "cross-env": "^5.0.1",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
+    "chai": "^4.1.2",
+    "sinon": "^4.0.0",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^3.0.0",
+    "babel-plugin-istanbul": "^4.1.1",
+    "phantomjs-prebuilt": "^2.1.14",
+    "node-notifier": "^5.1.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
@@ -59,10 +77,9 @@
     "vue-template-compiler": "^2.5.2",
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "style-loader": "*"
+    "postcss-loader": "^2.0.8"
   },
   "engines": {
     "node": ">= 4.0.0",
